feat: сверстала компонент button

--- a/src/index.sass
+++ b/src/index.sass
@@ -22,7 +22,8 @@
   --accent2: #f40000
   --main_black: #1f1f1f
   --secondary: #ffe6ef
-  --white: #ffe6ef
+  --white: #fff
+
   --grey: #909090
 
 body,
