--- a/src/components/banner/banner.module.sass
+++ b/src/components/banner/banner.module.sass
@@ -1,8 +1,6 @@
-.banner-container 
+.bannerContainer 
     text-align: center
     
-
-
-.banner-image 
-    max-width: 100%
-    height: auto
+.bannerImage 
+    width: 100%
+    
