--- a/src/components/marquee/marquee.module.sass
+++ b/src/components/marquee/marquee.module.sass
@@ -1,27 +1,25 @@
-.float-line
+.floatLine
     width: 100%
     overflow-x: hidden
     white-space: nowrap
     display: flex
     gap: 77px
-    margin: 75px 0
+    margin-top: 75px
     border-top: 2px solid var(--accent2)
     border-bottom: 2px solid var(--accent2)
     background-color: var(--accent1)
     padding: 13px
     
-    &-item
-        font-size: 25px
-        text-transform: uppercase
-        font-weight: 600
-        color: var(--accent2)
-        animation: marquee 10s linear infinite
+    &Item
+      font-size: 25px
+      font-weight: 600
+      color: var(--accent2)
+      animation: marquee 10s linear infinite
 
 
 @keyframes marquee 
   0%
     transform: translate(0, 0)
-  
   
   100%
     transform: translate(-160%, 0)
