--- a/src/components/button/button.module.sass
+++ b/src/components/button/button.module.sass
@@ -7,6 +7,8 @@
     cursor: pointer
     transition: .2s
     height: 60px
+    margin-top: 27px
+    margin-bottom: 73px
     &:hover path
         fill: var(--accent2)
     svg
