feat: add footer

--- a/src/index.sass
+++ b/src/index.sass
@@ -57,7 +57,10 @@ input:focus
   outline: none
 
 .container 
+  width: 100%
   display: flex
   justify-content: center
 
-
+wrapper
+  max-width: 1140px
+  margin: 0 auto
