--- a/src/index.sass
+++ b/src/index.sass
@@ -23,7 +23,6 @@
   --main_black: #1f1f1f
   --secondary: #ffe6ef
   --white: #fff
-
   --grey: #909090
 
 body,
@@ -38,6 +37,9 @@ ul,
 li
   margin: 0
   padding: 0
+
+html
+  font-size: 16px
 
 body
   font-family: "Montserrat", sans-serif
@@ -56,12 +58,12 @@ button
 input:focus
   outline: none
 
-.container 
+.container
   width: 100%
   display: flex
   justify-content: center
 
-wrapper
+.wrapper
   width: 100%
   max-width: 1140px
   margin: 0 auto
